<resources>
    <string name="app_name">BookDiary</string>

    <string name="home">홈</string>
    <string name="my_list">내 보관함</string>
    <string name="search">검색</string>
    <string name="search_book">제목, 저자, 출판사 검색</string>

    <string name="str_destroy_app_title">앱 종료</string>
    <string name="str_destroy_app_text">정말로 앱을 종료하시겠습니까?</string>
    <string name="str_pickup_title">찜 목록 제거</string>
    <string name="str_pickup_text">찜 목록에서 제거하시겠습니까?</string>
    <string name="str_cancel">취소</string>
    <string name="str_confirm">확인</string>
    <string name="iso_date_format">yyyy-MM-dd\'T\'HH:mm:ss.SSSX</string>
    <string name="date_format">yyyy년 MM월 dd일</string>
    <string name="save">저장하기</string>
    <string name="resent_search">최근 검색</string>
    <string name="delete_all">전체 삭제</string>

    <string name="error_book_list_loading">오류가 발생했습니다.</string>

    <string name="translate">%s 역</string>
    <string name="won">%s원</string>
    <string name="no_result">검색 결과없음</string>
    <string name="search_for_book">책을 검색해보세요</string>
    <string name="book_description">작품 소개</string>
    <string name="translator">역자</string>
    <string name="author">저자</string>
    <string name="publisher">출판사</string>
    <string name="price">가격</string>
    <string name="book_contents">%s...</string>
    <string name="release_date">출시일</string>

    <string name="setting">환경설정</string>
    <string name="version">버전정보</string>
    <string name="developer">개발자정보</string>
    <string name="screen_mode">화면모드</string>
    <string name="screen_day">주간</string>
    <string name="screen_night">야간</string>
    <string name="screen_system">시스템 설정</string>
</resources>