<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.lee.bookdiary.setting.SettingViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6dp"
            android:text="@string/setting"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/vw_top_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="@{()->viewModel.onBackClick()}"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintBottom_toTopOf="@id/vw_top_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/vw_top_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="56dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tw_screen_mode_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:paddingTop="12dp"
            android:paddingStart="16dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/screen_mode"
            android:textSize="18dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vw_top_line" />

        <RadioGroup
            android:id="@+id/radio_screen_mode_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/tw_screen_mode_title"
            app:layout_constraintTop_toBottomOf="@id/vw_top_line">

            <RadioButton
                android:id="@+id/radio_type_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/screen_day"
                android:textSize="16dp"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/radio_type_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/screen_night"
                android:textSize="16dp"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/radio_type_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/screen_system"
                android:textSize="16dp"
                android:textStyle="normal" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>