<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewModel"
            type="com.lee.bookdiary.detail.DetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/iw_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iw_background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iw_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/iw_favorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_star_border_24"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toTopOf="@id/iw_back" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cw_thumbnail"
                android:layout_width="150dp"
                android:layout_height="230dp"
                android:layout_marginTop="80dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iw_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:transitionName="transitionBookImage"
                    tools:src="@drawable/ic_baseline_menu_book_24" />


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="270dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/iw_background" />


            <TextView
                android:id="@+id/tw_book_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/cw_thumbnail"
                tools:text="title" />


            <TextView
                android:id="@+id/tw_author_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/author"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/tw_book_title"
                app:layout_constraintTop_toBottomOf="@id/tw_book_title" />

            <TextView
                android:id="@+id/tw_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tw_author_title"
                app:layout_constraintStart_toEndOf="@id/tw_author_title"
                tools:text="author" />

            <TextView
                android:id="@+id/tw_translator_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/translator"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tw_author_title"
                app:layout_constraintStart_toEndOf="@id/tw_author" />

            <TextView
                android:id="@+id/tw_translator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tw_author_title"
                app:layout_constraintStart_toEndOf="@id/tw_translator_title"
                tools:text="translator" />

            <TextView
                android:id="@+id/tw_publisher_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/publisher"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/tw_book_title"
                app:layout_constraintTop_toBottomOf="@id/tw_author" />

            <TextView
                android:id="@+id/tw_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tw_publisher_title"
                app:layout_constraintStart_toEndOf="@id/tw_publisher_title"
                tools:text="publisher" />

            <TextView
                android:id="@+id/tw_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/price"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/tw_book_title"
                app:layout_constraintTop_toBottomOf="@id/tw_publisher" />

            <TextView
                android:id="@+id/tw_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tw_price_title"
                app:layout_constraintStart_toEndOf="@id/tw_price_title"
                tools:text="10,000원" />

            <TextView
                android:id="@+id/tw_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tw_price"
                app:layout_constraintStart_toEndOf="@id/tw_price"
                app:layout_constraintTop_toTopOf="@id/tw_price"
                tools:text="status" />


            <TextView
                android:id="@+id/tw_release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/release_date"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/tw_book_title"
                app:layout_constraintTop_toBottomOf="@id/tw_price_title" />

            <TextView
                android:id="@+id/tw_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tw_release_date_title"
                app:layout_constraintStart_toEndOf="@id/tw_release_date_title"
                tools:text="출시일" />

            <View
                android:id="@+id/view_border"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tw_release_date" />

            <TextView
                android:id="@+id/tw_book_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/book_description"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/view_border" />

            <TextView
                android:id="@+id/tw_book_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tw_book_description_title"
                app:layout_constraintVertical_bias="0.0"
                tools:text="\n\n\n\n\n\n\n\n\n" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>