<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="com.lee.bookdiary.main.MainViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iw_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.onNavigationMenuClick()}"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/ic_baseline_menu_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tw_pickup_book_cnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:lineSpacingExtra="6dp"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="읽은책: 0권"
                android:onClick="@{()->viewModel.onReadCountClick()}"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <FrameLayout
                android:id="@+id/fragment_container_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/iw_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout="@layout/activity_main" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view_main"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="start">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/img_navigation_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="21dp"
                    android:padding="10dp"
                    android:onClick="@{()->viewModel.onNavigationCloseClick()}"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_navigation"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/tw_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_navigation_close" />
                <TextView
                    android:id="@+id/tw_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingExtra="6dp"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/tw_version_info"
                    app:layout_constraintStart_toStartOf="@id/tw_developer" />

                <ImageView
                    android:id="@+id/iw_setting_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_settings_24"
                    app:layout_constraintBottom_toTopOf="@id/tw_setting_option"
                    app:layout_constraintStart_toStartOf="@id/tw_developer"/>
                <TextView
                    android:id="@+id/tw_setting_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/setting"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:onClick="@{()->viewModel.onSettingClick()}"
                    app:layout_constraintBottom_toTopOf="@id/iw_version_info"
                    app:layout_constraintStart_toStartOf="@id/tw_developer" />

                <ImageView
                    android:id="@+id/iw_version_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_code_24"
                    app:layout_constraintBottom_toTopOf="@id/tw_version_info"
                    app:layout_constraintStart_toStartOf="@id/tw_developer"/>
                <TextView
                    android:id="@+id/tw_version_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/version"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toTopOf="@id/iw_developer"
                    app:layout_constraintStart_toStartOf="@id/tw_developer" />

                <ImageView
                    android:id="@+id/iw_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_person_pin_24"
                    app:layout_constraintBottom_toTopOf="@id/tw_developer"
                    app:layout_constraintStart_toStartOf="@id/tw_developer"/>
                <TextView
                    android:id="@+id/tw_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="50dp"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/developer"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:onClick="@{()->viewModel.onDeveloperClick()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>